--- a/css/box_model_stylesheet.css
+++ b/css/box_model_stylesheet.css
@@ -1,8 +1,3 @@
-h1 {
-    text-decoration: underline;
-    color: blue;
-}
-
 .box {
     border: 1px solid black;
     width: 150px;
@@ -10,7 +5,9 @@ h1 {
     padding: 10px;
     margin-bottom: 10px;
     color: white;
+    font-weight: bold;
 }
+
 
 #first_box {
     margin-left:0px;
@@ -19,13 +16,12 @@ h1 {
 
 #second_box {
     margin-left: 30px;
-
-    background-color: gold;
+    background-color: orange;
 }
 
 #third_box {
     margin-left: 60px;
-    background-color: blue;
+    background-color: yellow;
 }
 
 #fourth_box {
@@ -35,12 +31,12 @@ h1 {
 
 #fifth_box {
     margin-left: 120px;
-    background-color: purple;
+    background-color: blue;
 }
 
 #sixth_box {
     margin-left: 150px;
-    background-color: hotpink;
+    background-color: violet;
 }
 
 
