all new files/exercises

--- a/grid-layout.css
+++ b/grid-layout.css
@@ -1,25 +1,48 @@
-body {
-    background-color: cornflowerblue;
-    color: black;
-    box-sizing: border-box;
+.container {
+    margin: 0 auto;
+    width: 80%;
+    max-width: 1200px;
 }
 
-.container {
-    border: 2px solid greenyellow;
-    background-color: slategray;
-    width:10px;
+.row {
+    background-color: #e1e1e1 ;
+    margin-bottom: 10px;
+    height: 50px;
+    width: 100%;
 }
 
 .one-half {
-    background-color: white;
-
+    float: left;
+    width: 50%;
+    height: 50px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 .one-third {
-    background-color: white;
+    float: left;
+    width: calc(100%/3);
+    height: 50px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 .one-fourth {
-    background-color: white;
+    float: left;
+    width: calc(100%/4);
+    height: 50px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
+.one-eighth {
+    float: left;
+    width: calc(100%/8);
+    height: 50px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    padding: 10px;
+}
