--- a/css/training2.css
+++ b/css/training2.css
@@ -1,43 +1,3 @@
-.mmcolor {
-    background-color: pink;
+*div {
+    border: 1px solid pink;
 }
-
-.color {
-    background-color: deepskyblue;
-}
-
-.mcolor {
-    background-color: lawngreen;
-}
-
-h1 {
-    text-align: center;
-}
-
-main {
-    background-color:#eee;
-}
-
-h2 {
-    text-align: center;
-}
-
-.div.row.col-sm-3.color {
-    border: 2px solid darkgrey;
-}
-
-.nav {
-    background-color: white;
-}
-
-.d1 {
-    background-color: white;
-}
-
-
-
-
-
-/* @media screen and(min-width: 500px) {
-
-} */
